# HEADSS2

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: python-ci.yml
benchmarking/: birch1_benchmarking.csv  birch1_benchmarking.py
code/: HEADSS.py  eval.ipynb  quick_start.ipynb  readme.txt  train.ipynb
demo/: headss_demo.ipynb
docs/: api.rst  index.rst
example_data/: a3.csv  birch1.csv  citations.txt  worms_2d.csv
headss/: cluster.py  datasets.py  partition.py  regions.py  stitching.py
headss2/: __init__.py  api.py  cluster.py  clustering.py  clustering_spark.py  datasets.py  merging.py  regions.py  stitching.py  union_find.py
headss2/example_data/: t4_8k.csv
source/: conf.py
test_data/: readme.md
test_data/worms/: readme.txt
tests/: conftest.py  dataset_fixtures.py  run_tests_spark.py  test_clustering.py  test_merging.py  test_merging_functional.py  test_regions.py  test_regions_functional.py  test_regions_integration.py  test_stitching.py  test_stitching_functional.py  test_stitching_integration.py  test_union_find.py
tests/ground_truth/: a3_centers.csv  a3_clustered.csv  a3_cut_misplaced_centers.csv  a3_stitch_regions.csv  a3_stitched.csv  flame_regions.csv  flame_split_regions.csv  flame_stitch_regions.csv  flame_stitching_result.csv  spiral_regions.csv  spiral_split_regions.csv  spiral_stitch_regions.csv  spiral_stitching_result.csv  t48k_cluster_descriptions.csv  t48k_cluster_oob_info.csv  t48k_clustered.csv  t48k_matches.csv  t48k_merged_clusters.csv  t48k_split_regions.csv
