[project]
name = "headss2"
version = "0.1.2"
authors = [
  { name="Simon Harnqvist", email="sharnvi@roe.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan==0.8.39",
    "matplotlib==3.10.3",
    "mypy==1.17.0",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools==80.9.0"
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["headss2"]
include-package-data = true

[tool.setuptools.package-data]
"headss2.example_data" = ["*"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.3",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "sphinxcontrib-napoleon>=0.7"]
